@@ -27,5 +27,5 @@ external release_bytecode : bytecode -> unit
                                  = "caml_static_release_bytecode"
 external invoke_traced_function : Obj.raw_data -> Obj.t -> Obj.t -> Obj.t
                                 = "caml_invoke_traced_function"
-external get_section_table : unit -> (Bytesections.Name.t * Obj.t) list
+external get_section_table : unit -> (string * Obj.t) list
                            = "caml_get_section_table"
